# test_controller_pkg

./: CMakeLists.txt  README.md  package.xml
cmake/: FindAMBFClient.cmake  FindAMBFMSGS.cmake  Findambf_client.cmake  Findambf_msgs.cmake  ambf_clientConfig.cmake  ambf_commConfig.cmake  ambf_msgs-genmsg.cmake  ambf_msgs-msg-paths.cmake  ambf_msgsConfig.cmake
model/ecm/: default.yaml
model/ecm/high_res/: base link.STL  main insertion link.STL  pitch back link.STL  pitch bottom link.STL  pitch end link.STL  pitch front link.STL  pitch top link.STL  remote center link.STL  tool link.STL  yaw link.STL
model/ecm/low_res/: base link.STL  main insertion link.STL  pitch back link.STL  pitch bottom link.STL  pitch end link.STL  pitch front link.STL  remote center link.STL  tool link.STL  yaw link.STL
model/exo/: default.yaml
model/kuka/: default.yaml
model/kuka2/: default.yaml.old
model/kuka2/high_res/: link1.STL  link2.STL  link4.STL  link7.STL
model/kuka2/low_res/: base.STL  link3.STL  link5.STL  link6.STL
model/psm/: default.yaml
model/psm/high_res/: base link.STL  main insertion link.STL  pitch top link.STL  tool gripper1 link.STL  tool gripper2 link.STL  tool roll link.STL
model/psm/low_res/: pitch back link.STL  pitch bottom link.STL  pitch end link.STL  pitch front link.STL  tool pitch link.STL  yaw link.STL
models/: kuka.yaml
models/cube_robot/: test-robot.yaml
models/cube_robot/low_res/: Cube_001.STL  Cube_002.STL  Cube_004.STL  base.STL
src/: control_node.cpp  ecm_control_node.cpp  ecm_main.cpp  kuka_gravity.cpp  kuka_main.cpp  kuka_main_task.cpp  kuka_model_controller.cpp  kuka_task_latency_test.cpp  main_test.cpp  my_robot_gravity.cpp
